# Proyectos_Flutter

App_Celu/app_prueba/: pubspec.yaml
imc_calculator/: pubspec.yaml
imc_calculator/lib/: main.dart
imc_calculator/lib/components/: gender_selected.dart
imc_calculator/lib/core/: app_colors.dart  text_styles.dart
imc_calculator/lib/screens/: imc_home_screen.dart
texel_domotica/: README.md  pubspec.yaml
texel_domotica/android/app/: build.gradle.kts
texel_domotica/ios/Runner/: Info.plist
texel_domotica/ios/Runner.xcodeproj/: project.pbxproj
texel_domotica/lib/: main.dart
texel_domotica/lib/core/: app_colors.dart  text_styles.dart
texel_domotica/lib/models/: device.dart
texel_domotica/lib/screens/: txl_home_screen.dart
texel_domotica/linux/: CMakeLists.txt
texel_domotica/web/: index.html  manifest.json
texel_domotica/windows/: CMakeLists.txt
texel_iot_project/: readme.md
texel_iot_project/.github/: copilot-instructions.md
texel_iot_project/backend_local/: docker-compose.yml  readme.md
texel_iot_project/firmware_equipo/: readme.md
texel_iot_project/firmware_equipo/smart_panel/main/: CMakeLists.txt  idf_component.yml  main.c
texel_iot_project/firmware_equipo/smart_panel/main/controller/: ui_ctrl.c  ui_ctrl.h
texel_iot_project/firmware_equipo/smart_panel/main/model/: app_mqtt.c  app_mqtt.h  app_sntp.c  app_sntp.h  app_wifi.c  app_wifi.h
texel_iot_project/firmware_equipo/smart_panel/main/view/ui/: images.c  images.h  screens.c  screens.h  ui_image_wifi.c
texel_iot_project/mobile_app/: pubspec.yaml
(+33 files in other folders)
